--- a/public/stylesheets/my-account.css
+++ b/public/stylesheets/my-account.css
@@ -11,6 +11,39 @@
 .myaccount-subtitle-container h2 {
   padding: 6px;
 }
+.myaccount-box {
+  border: 1px solid #666;
+  border-radius: 7px;
+  margin-bottom: 15px;
+  padding: 15px;
+}
+.myaccount-box h3 {
+  margin: 0 0 15px;
+}
+.myaccount-box p {
+  margin: 3px 0;
+}
+.myaccount-toolbar .myaccount-toolbar__left {
+  float: left;
+}
+.myaccount-toolbar .myaccount-toolbar__right {
+  float: right;
+}
+.myaccount-toolbar .myaccount-toolbar__right .button:last-child {
+  margin-right: 0;
+}
+.myaccount-toolbar.toolbar-top .button {
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+.myaccount-toolbar.toolbar-bottom .button {
+  margin-top: 15px;
+  margin-bottom: 0;
+}
+.myaccount-toolbar p.inline {
+  display: inline-block;
+  margin-right: 15px;
+}
 .myaccount-stack-view__box {
   display: flex;
   border: 1px solid #666;
