Add new privileges system

--- a/public/stylesheets/controls.less
+++ b/public/stylesheets/controls.less
@@ -205,6 +205,7 @@ select {
 .checkbox-container__input--table-cell {
     position: relative !important;
     display: block;
+    margin: 0;
 }
 
 .user-dropdown {
