--- a/views/accounts/my-account/my-info/index.pug
+++ b/views/accounts/my-account/my-info/index.pug
@@ -3,19 +3,18 @@ extends ../layout
 
 block my-account-content
     .myaccount-stack-view
-        if privileges
-            if privileges.changeName
-                a.myaccount-stack-view__box.myaccount-stack-view__box--related(href='/myaccount/my-info/name')
-                    span Name
-                    span.myaccount-stack-view__box-value #{user.first_name} #{user.last_name}
-                    img.myaccount-stack-view__box-image(src= staticProtocol + staticDomain + '/assets/images/rightarrow16x16.png' srcset= staticProtocol + staticDomain + '/assets/images/rightarrow32x32.png 2x')
-            if privileges.changeUsername
-                a.myaccount-stack-view__box.myaccount-stack-view__box--related(href='/myaccount/my-info/username')
-                    span Username
-                    span.myaccount-stack-view__box-value #{user.username}
-                    img.myaccount-stack-view__box-image(src= staticProtocol + staticDomain + '/assets/images/rightarrow16x16.png' srcset= staticProtocol + staticDomain + '/assets/images/rightarrow32x32.png 2x')
-            if privileges.changeDob
-                a.myaccount-stack-view__box.myaccount-stack-view__box--related(href='/myaccount/my-info/dob')
-                    span Date of Birth
-                    span.myaccount-stack-view__box-value #{user.dob.getDate()}/#{user.dob.getMonth() + 1}/#{user.dob.getFullYear()}
-                    img.myaccount-stack-view__box-image(src= staticProtocol + staticDomain + '/assets/images/rightarrow16x16.png' srcset= staticProtocol + staticDomain + '/assets/images/rightarrow32x32.png 2x')
+        if user.privileges.hasPrivilege('account.info.change_name')
+            a.myaccount-stack-view__box.myaccount-stack-view__box--related(href='/myaccount/my-info/name')
+                span Name
+                span.myaccount-stack-view__box-value #{user.first_name} #{user.last_name}
+                img.myaccount-stack-view__box-image(src= staticProtocol + staticDomain + '/assets/images/rightarrow16x16.png' srcset= staticProtocol + staticDomain + '/assets/images/rightarrow32x32.png 2x')
+        if user.privileges.hasPrivilege('account.info.change_username')
+            a.myaccount-stack-view__box.myaccount-stack-view__box--related(href='/myaccount/my-info/username')
+                span Username
+                span.myaccount-stack-view__box-value #{user.username}
+                img.myaccount-stack-view__box-image(src= staticProtocol + staticDomain + '/assets/images/rightarrow16x16.png' srcset= staticProtocol + staticDomain + '/assets/images/rightarrow32x32.png 2x')
+        if user.privileges.hasPrivilege('account.info.change_dob')
+            a.myaccount-stack-view__box.myaccount-stack-view__box--related(href='/myaccount/my-info/dob')
+                span Date of Birth
+                span.myaccount-stack-view__box-value #{user.dob.getDate()}/#{user.dob.getMonth() + 1}/#{user.dob.getFullYear()}
+                img.myaccount-stack-view__box-image(src= staticProtocol + staticDomain + '/assets/images/rightarrow16x16.png' srcset= staticProtocol + staticDomain + '/assets/images/rightarrow32x32.png 2x')
