--- a/views/admin/users/name.pug
+++ b/views/admin/users/name.pug
@@ -2,7 +2,7 @@
 extends ../layout
 
 block admin-content
-    if hasPermission
+    if user.privileges.hasPrivilege('admin.users.change_name')
         if error
             h2.error= error
         if success
