--- a/public/stylesheets/modal.less
+++ b/public/stylesheets/modal.less
@@ -59,7 +59,11 @@
     }
 
     @media screen and (max-width: 940px) {
+        margin-top: 0;
+        max-height: 100vh;
+        height: 100vh;
         width: 75%;
+        border-radius: 0;
     }
 
     @media screen and (max-width: 560px) {
