--- a/public/stylesheets/widgets.less
+++ b/public/stylesheets/widgets.less
@@ -25,6 +25,11 @@
     overflow: hidden;
 }
 
+#widget-add-dialog-type-container__loading {
+    padding: 7px;
+    margin: auto;
+}
+
 .widget-add-dialog-type-container__item {
     display: inline-block;
     text-align: center;
@@ -34,7 +39,7 @@
         background-color: @input-hover-color;
     }
 
-    &:active {
+    &.active {
         background-color: #002DB3;
         color: #FFF;
     }
